security.tf
resource "aws_security_group" "public_web" {
  name        = "public-web-sg"
  description = "Allow inbound HTTP and HTTPS from the internet"
  vpc_id      = module.vpc.vpc_id

  ingress {
    description = "Allow HTTP"
   from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Allow HTTPS"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "Allow all outbound traffic"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "public-web-sg"
  }
}
